# drake

./: .gitignore  .gitmodules
drake/examples/bhpn_drake_interface/: BUILD  CMakeLists.txt  genesis_bhpn_connection.py  robot_state_debugger.py  simulation.cc  simulation_just_iiwa.sh  simulation_just_pr2.sh  simulation_just_valkyrie.sh  temporary.txt
drake/examples/bhpn_drake_interface/bhpn_drake_interface_python_utils/: bhpn_test_to_drake_simulation.py
drake/examples/bhpn_drake_interface/controllers/: pr2_fixed_controller.cc  pr2_fixed_controller.h
drake/examples/bhpn_drake_interface/lcm_utils/: body_position_data_lcm.cc  body_position_data_lcm.h  oracular_state_estimator.cc  oracular_state_estimator.h  piecewise_polynomial_lcm.cc  piecewise_polynomial_lcm.h  robot_plan_interpolator.cc  robot_plan_interpolator.h  robot_state_lcm.cc  robot_state_lcm.h
drake/examples/bhpn_drake_interface/object_conversion_utils/: .template.urdf.swp  bhpn_to_drake_object.py  drake_graspable_object.off  drake_graspable_object_old.off  drake_graspable_soda.dae  drake_graspable_soda.off  drake_really_graspable_soda.off  template.urdf
drake/examples/bhpn_drake_interface/objects/: README.md  drake_soda.urdf  drake_soda_blue.urdf  drake_soda_light.urdf  drake_table.sdf
drake/examples/bhpn_drake_interface/python_utils/: .bhpn_to_drake_object.py.swp  .bhpn_to_drake_simulation.py.swp  bhpn_to_drake_object.py  bhpn_to_drake_simulation.py  lcmt_contact_results_for_viz.py  pr2_ik.py  pr2_joints_for_base_movement_bhpn_drake_connection.py  robot_bhpn_drake_connection.py
drake/examples/bhpn_drake_interface/scripts/: .bhpn_drake_interface.py.swp  bhpn_drake_connection.py  bhpn_drake_interface.py  pr2_joints_for_base_movement_bhpn_drake_connection.py  robot_bhpn_drake_connection.py
drake/examples/bhpn_drake_interface/simulation_utils/: sim_diagram_builder.cc  world_sim_tree_builder.cc  (+1 more)
tools/: BUILD  (+1 more)
(+184 files in other folders)
